minor display/spacing fixes

--- a/app/assets/stylesheets/challenges.scss
+++ b/app/assets/stylesheets/challenges.scss
@@ -182,12 +182,6 @@
         height: 17px;
       }
     }
-
-    .spacer {
-      float: left;
-      height: 50px;
-      width: 200px;
-    }
   }
 
   .no-completed-challenges {
